unpackaged/main/default/objects/Account/fields/Actual_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Salary_Amount__c</fullName>
    <label>Actual Salary Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>