unpackaged/main/default/objects/Account/fields/Bank_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Reference</label>
    <referenceTo>ETT_Bank_Reference__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>