unpackaged/main/default/objects/Account/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sovrin</fullName>
            </value>
            <value>
                <fullName>Government Fedral</fullName>
            </value>
            <value>
                <fullName>Semi Government Fedral</fullName>
            </value>
            <value>
                <fullName>Government Local</fullName>
            </value>
            <value>
                <fullName>Semi Government Local</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>