unpackaged/main/default/objects/Account/fields/Count_of_Address__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Address__c</fullName>
    <label>Count of Address</label>
    <summaryForeignKey>ETSALES_Address__c.ETSALES_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>