unpackaged/main/default/objects/Account/fields/Deduction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deduction Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>