unpackaged/main/default/objects/Account/fields/Dispute_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>