unpackaged/main/default/objects/Account/fields/Employee_Tabs__c.field-meta.xml
<CustomField>
    <fullName>Employee_Tabs__c</fullName>
    <label>Employee Tabs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETDI Booking Request</fullName>
            </value>
            <value>
                <fullName>ETDI Trainer Schedules</fullName>
            </value>
            <value>
                <fullName>VRTS</fullName>
            </value>
            <value>
                <fullName>QHSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>