unpackaged/main/default/objects/Account/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>