unpackaged/main/default/objects/Account/fields/ET_Account_No__c.field-meta.xml
<CustomField>
    <fullName>ET_Account_No__c</fullName>
    <label>Account No</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>