unpackaged/main/default/objects/Account/fields/ET_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>ET_Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>