unpackaged/main/default/objects/Account/fields/ET_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>ET_Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>