unpackaged/main/default/objects/Account/fields/ET_Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>ET_Emirates_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>