unpackaged/main/default/objects/Account/fields/ET_Nationality__c.field-meta.xml
<CustomField>
    <fullName>ET_Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETST_Nationality</valueSetName>
    </valueSet>
</CustomField>