unpackaged/main/default/objects/Account/fields/ET_PrimaryBillingCount__c.field-meta.xml
<CustomField>
    <fullName>ET_PrimaryBillingCount__c</fullName>
    <label>Primary Billing Count</label>
    <summaryFilterItems>
        <field>ETST_Address__c.ET_Is_Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ETST_Address__c.ET_Address_Type__c</field>
        <operation>equals</operation>
        <value>BILL_TO</value>
    </summaryFilterItems>
    <summaryForeignKey>ETST_Address__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>