unpackaged/main/default/objects/Account/fields/ETDI_License__c.field-meta.xml
<CustomField>
    <fullName>ETDI_License__c</fullName>
    <label>ETDI License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LAV</fullName>
            </value>
            <value>
                <fullName>LMV</fullName>
            </value>
            <value>
                <fullName>HVB</fullName>
            </value>
            <value>
                <fullName>MOT</fullName>
            </value>
            <value>
                <fullName>HVT</fullName>
            </value>
            <value>
                <fullName>HFL</fullName>
            </value>
            <value>
                <fullName>LFL</fullName>
            </value>
            <value>
                <fullName>SHO</fullName>
            </value>
            <value>
                <fullName>BLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>