unpackaged/main/default/objects/Account/fields/ETI_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ETI_Emirates__c</fullName>
    <label>Emirates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UAE_Emirates</valueSetName>
    </valueSet>
</CustomField>