unpackaged/main/default/objects/Account/fields/ETI_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>ETI_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Territory associated with Account</description>
    <inlineHelpText>Service Territory Associated with School.</inlineHelpText>
    <label>Service Territory</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Assign Inspection Service Territory</errorMessage>
        <filterItems>
            <field>ServiceTerritory.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Inspection_Service_Territory</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>