unpackaged/main/default/objects/Account/fields/ETIN_Activity_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Activity_Center_Code__c</fullName>
    <description>Employee Info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Center Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>