unpackaged/main/default/objects/Account/fields/ETIN_Department__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>