unpackaged/main/default/objects/Account/fields/ETIN_EID_Application_No__c.field-meta.xml
<CustomField>
    <fullName>ETIN_EID_Application_No__c</fullName>
    <description>Employee Info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Application No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>