unpackaged/main/default/objects/Account/fields/ETIN_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Employee_Id__c</fullName>
    <description>Insurance</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Employee Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>