unpackaged/main/default/objects/Account/fields/ETIN_Employee_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Employee_Zone__c</fullName>
    <description>Employee Info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>