unpackaged/main/default/objects/Account/fields/ETIN_Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Gross_Salary__c</fullName>
    <description>Insurance</description>
    <label>Gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>