unpackaged/main/default/objects/Account/fields/ETIN_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Job_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>