unpackaged/main/default/objects/Account/fields/ETIN_Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Joining_Date__c</fullName>
    <description>Insurance - employee info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>