unpackaged/main/default/objects/Account/fields/ETIN_Leaving_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Leaving_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Leaving Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>