unpackaged/main/default/objects/Account/fields/ETIN_Location__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Location__c</fullName>
    <description>Employee Location - GL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>