unpackaged/main/default/objects/Account/fields/ETIN_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Location_Code__c</fullName>
    <description>Employee GL info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>