unpackaged/main/default/objects/Account/fields/ETIN_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>