unpackaged/main/default/objects/Account/fields/ETIN_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Name_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Arabic local name</inlineHelpText>
    <label>Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>