unpackaged/main/default/objects/Account/fields/ETIN_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Number</label>
    <type>Phone</type>
</CustomField>