unpackaged/main/default/objects/Account/fields/ETIN_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Passport_Number__c</fullName>
    <description>Employee Info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>