unpackaged/main/default/objects/Account/fields/ETIN_Place_of_Visa_Issuance__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Place_of_Visa_Issuance__c</fullName>
    <description>Insurance</description>
    <label>Place of Visa Issuance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UAE_Emirates</valueSetName>
    </valueSet>
</CustomField>