unpackaged/main/default/objects/Account/fields/ETIN_Position_Name__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Position_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>