unpackaged/main/default/objects/Account/fields/ETIN_Project__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Project__c</fullName>
    <description>Employee GL info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project</label>
    <length>50</length>
    <type>Text</type>
</CustomField>