unpackaged/main/default/objects/Account/fields/ETIN_Salary_Band__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Salary_Band__c</fullName>
    <label>Salary Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;=4000</fullName>
            </value>
            <value>
                <fullName>&gt;4000 &lt;=12000</fullName>
            </value>
            <value>
                <fullName>&gt; 12000</fullName>
            </value>
            <value>
                <fullName>No Salary</fullName>
            </value>
            <value>
                <fullName>&gt;12000</fullName>
                <isActive>false</isActive>
                <label>&gt;12000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>