unpackaged/main/default/objects/Account/fields/ETIN_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Termination_Date__c</fullName>
    <description>Employee Info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>