unpackaged/main/default/objects/Account/fields/ETIN_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Termination_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>