unpackaged/main/default/objects/Account/fields/ETIN_Visa_Unified_Number__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Visa_Unified_Number__c</fullName>
    <description>Employee Info</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Visa Unified Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>