unpackaged/main/default/objects/Account/fields/ETIN_Visible_to_Admin__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Visible_to_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Admin Only</label>
    <type>Checkbox</type>
</CustomField>