unpackaged/main/default/objects/Account/fields/ETIN_Work_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Work_Emirates__c</fullName>
    <description>Insurance</description>
    <label>Work Emirates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UAE_Emirates</valueSetName>
    </valueSet>
</CustomField>