unpackaged/main/default/objects/Account/fields/ETSALES_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sports And Social Club</fullName>
            </value>
            <value>
                <fullName>Ministry And Government</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Contracting And Decoration</fullName>
            </value>
            <value>
                <fullName>Haj And Ommrah</fullName>
            </value>
            <value>
                <fullName>Hotel,Restaurant,Catering,Tourism,Travel</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Petrol And Gas</fullName>
            </value>
            <value>
                <fullName>Welfare Society</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Trading And Commercial</fullName>
            </value>
            <value>
                <fullName>Model School</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Sundary</fullName>
            </value>
            <value>
                <fullName>Leisure and Tourism</fullName>
            </value>
            <value>
                <fullName>Logistic Services</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Advertisement And Promotional</fullName>
            </value>
            <value>
                <fullName>Private School</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Workshop And Garage</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>University And College</fullName>
            </value>
            <value>
                <fullName>MOTO</fullName>
            </value>
            <value>
                <fullName>Ajyal School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>