unpackaged/main/default/objects/Account/fields/ETSALES_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Activity_Name__c</fullName>
    <label>Activity Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car Rental Services</fullName>
            </value>
            <value>
                <fullName>Limo Services</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Technical Service</fullName>
            </value>
            <value>
                <fullName>Emirates Transport and leasing</fullName>
            </value>
            <value>
                <fullName>UCNG</fullName>
            </value>
            <value>
                <fullName>Al Wataneyah Auction Center</fullName>
            </value>
            <value>
                <fullName>Government Transport</fullName>
            </value>
            <value>
                <fullName>Petroleum Transport Center</fullName>
            </value>
            <value>
                <fullName>East Coast Technical Service</fullName>
            </value>
            <value>
                <fullName>RAK Technical Service</fullName>
            </value>
            <value>
                <fullName>Body Shop Unit</fullName>
            </value>
            <value>
                <fullName>Luxury Vehicles Maintenance unit</fullName>
            </value>
            <value>
                <fullName>School Services Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>