unpackaged/main/default/objects/Account/fields/ETSALES_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Company_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>