unpackaged/main/default/objects/Account/fields/ETSALES_Converted_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Converted_from_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is mapped during Lead Conversion, If this is Checked - Account is Created from Lead.</description>
    <label>Converted from Lead</label>
    <type>Checkbox</type>
</CustomField>