unpackaged/main/default/objects/Account/fields/ETSALES_Current_Fleet_Details__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Current_Fleet_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Fleet Details</label>
    <type>TextArea</type>
</CustomField>