unpackaged/main/default/objects/Account/fields/ETSALES_Customer_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Customer_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Customer Oracle ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>