unpackaged/main/default/objects/Account/fields/ETSALES_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>