unpackaged/main/default/objects/Account/fields/ETSALES_Email__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>