unpackaged/main/default/objects/Account/fields/ETSALES_Emirates_Passport__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Emirates_Passport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Emirates ID or Passport Number</inlineHelpText>
    <label>Emirates ID / Passport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>