unpackaged/main/default/objects/Account/fields/ETSALES_Fleet_summary_Light_vehicles__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Fleet_summary_Light_vehicles__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fleet summary (Light vehicles)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>