unpackaged/main/default/objects/Account/fields/ETSALES_Parents_Email__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Parents_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parents Email</label>
    <type>Email</type>
</CustomField>