unpackaged/main/default/objects/Account/fields/ETSALES_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>30 NET</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>180 Days</fullName>
            </value>
            <value>
                <fullName>360 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>