unpackaged/main/default/objects/Account/fields/ETSALES_Ph_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Ph_Country_Code__c</fullName>
    <label>Ph Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISD_Country_Code</valueSetName>
    </valueSet>
</CustomField>