unpackaged/main/default/objects/Account/fields/ETSALES_Profile_Class__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Profile_Class__c</fullName>
    <label>Profile Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ETSALES_Customer_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Ministries</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Semi Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>