unpackaged/main/default/objects/Account/fields/ETSALES_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Profile_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>profile Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>