unpackaged/main/default/objects/Account/fields/ETSALES_Reference__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Reference__c</fullName>
    <displayFormat>CUS-{0000}</displayFormat>
    <label>Reference</label>
    <type>AutoNumber</type>
</CustomField>