unpackaged/main/default/objects/Account/fields/ETSALES_Status__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>