unpackaged/main/default/objects/Account/fields/ETSALES_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Total_Budget__c</fullName>
    <label>Total Budget</label>
    <summarizedField>ETSALES_Account_Plan__c.ETSALES_January_Actual__c</summarizedField>
    <summaryForeignKey>ETSALES_Account_Plan__c.ETSALES_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>