unpackaged/main/default/objects/Account/fields/ETSALES_Trade_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Trade_License_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Expiry Date</label>
    <type>Date</type>
</CustomField>