unpackaged/main/default/objects/Account/fields/ETSALES_Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Trade_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Number(Decree No)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>